# YAFI

./: .gitignore  MANIFEST.in  README.md  add-udev-rules.sh  au.stevetech.yafi.json  battery.ui  hardware.ui  leds.ui  meson.build  pyproject.toml  yafi.cmb  yafi.py  yafi.ui
.github/workflows/: flatpak.yml  pyinstaller-linux.yml  pyinstaller-windows.yml
data/: au.stevetech.yafi.desktop.in  au.stevetech.yafi.gschema.xml  au.stevetech.yafi.metainfo.xml.in  au.stevetech.yafi.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
pyinstaller/: entrypoint.py  winyafi.py  winyafi.spec  yafi.spec
yafi/: __init__.py  __main__.py  battery.py  battery_limiter.py  hardware.py  leds.py  main.py  meson.build  thermals.py  yafi.gresource  yafi.gresource.xml  yafi.in  yafi.py
yafi/ui/: about.ui  battery-limiter.ui  battery.ui  hardware.ui  leds.cmb  leds.ui  thermals.ui  yafi.cmb  yafi.ui
