[project]
name = "yafi"
version = "0.1"
authors = [
  { name="Steve-Tech" }
]
description = "Yet Another Framework Interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cros_ec_python >= 0.0.2",
  "PyGObject"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
lpc = ["portio"]

[project.urls]
Repository = "https://github.com/Steve-Tech/YAFI"
Issues = "https://github.com/Steve-Tech/YAFI/issues"

[project.gui-scripts]
yafi = "yafi:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
